let its snow, easter egg del logo nevado creado correctamente

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" >
+    <script async src="js/index.js"></script>
 
 </head>
 <body class="body">
     <header class="header">
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
+
+                <li class="header-li"> <img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
                 <li class="header-li"><a class="">Inicio</a></li>
                 <li class="header-li"><a href="personajes.html" class="">Personajes</a></li>
                 <li class="header-li"><a class="">Episodios</a></li>
