casi todo listo, falta añadir modo oscuro y animacion para la pagina de error 404

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <header class="header">
         <nav class="header-nav">
             <ul class="header-ul">
-
-                <li class="header-li"> <img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
-                <li class="header-li"><a class="">Inicio</a></li>
+                <li class="header-li"><a href="index.html" class=""><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></a></li>
+                <li id="header_inicio" class="header-li"><a  href="index.html">Inicio</a></li>
                 <li class="header-li"><a href="personajes.html" class="">Personajes</a></li>
-                <li class="header-li"><a class="">Episodios</a></li>
-                <li class="header-li"><a href="contacto.html">Contacto</a></li>
-                <li class="header-li"><a href="login.html" class="">Login</a></li>
+                <li class="header-li"><a href="episodios.html" class="">Episodios</a></li>
+                <li id="header_contacto" class="header-li"><a href="contacto.html" >Contacto</a></li>
+                <li class="header-li"><a  href="registro.html" class="">Registro</a></li>
 
             </ul>
         </nav>
@@ -56,12 +55,13 @@
     <footer class="footer">
         <hr>
         <nav class="footer-nav" >
-            <a class="">Cookies</a>
+            <a class="footer-cookies">Cookies</a>
             <a class="">Privacidad</a>
             <a class="">Info Legal</a>
-            <a class="">Sobre Nosotros</a>
-            <a class="">Condiciones</a>
-            <a class=""  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+            <a class="footer-nosotros">Sobre Nosotros</a>
+            <a class="footer-condiciones">Condiciones</a>
+            <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+            <a class="footer-contacto"  href="contacto.html">Contacto</a>
         </nav>
     </footer>
 </body>
