--- a/presentacion-episodio.html
+++ b/presentacion-episodio.html
@@ -13,18 +13,20 @@
         <header class="header">
             <nav class="header-nav">
                 <ul class="header-ul">
-                    <li class="header-li"><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
-                    <li class="header-li"><a href="index.html" class="">Inicio</a></li>
+                    <li class="header-li"><a href="index.html" class=""><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></a></li>
+                    <li id="header_inicio" class="header-li"><a  href="index.html">Inicio</a></li>
                     <li class="header-li"><a href="personajes.html" class="">Personajes</a></li>
-                    <li class="header-li"><a class="">Episodios</a></li>
-                    <li class="header-li"><a href="contacto.html">Contacto</a></li>
+                    <li class="header-li"><a href="episodios.html" class="">Episodios</a></li>
+                    <li id="header_contacto" class="header-li"><a href="contacto.html" >Contacto</a></li>
                     <li class="header-li"><a  href="registro.html" class="">Registro</a></li>
-    
+
                 </ul>
             </nav>
         </header>
         <main  class="main">
+            <div>
             <img  class="main-image" src="images/1x1.jpg">
+            </div>
             <h3 class="main-description-h3">Temporada 1, Episodio 1</h3>
             <h2 class="main-description-h2">Sinopsis</h2>
             <article class="main-parrafo">
@@ -40,12 +42,13 @@
         <footer class="footer">
             <hr>
             <nav class="footer-nav" >
-                <a class="">Cookies</a>
+                <a class="footer-cookies">Cookies</a>
                 <a class="">Privacidad</a>
                 <a class="">Info Legal</a>
-                <a class="">Sobre Nosotros</a>
-                <a class="">Condiciones</a>
-                <a class=""  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+                <a class="footer-nosotros">Sobre Nosotros</a>
+                <a class="footer-condiciones">Condiciones</a>
+                <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+                <a class="footer-contacto"  href="contacto.html">Contacto</a>
             </nav>
         </footer>
     </body>
