--- a/contacto.html
+++ b/contacto.html
@@ -12,11 +12,11 @@
     <header class="header">
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
-                <li class="header-li"><a href="index.html" class="">Inicio</a></li>
-                <li class="header-li"><a class="">Personajes</a></li>
-                <li class="header-li"><a class="">Episodios</a></li>
-                <li class="header-li"><a class="">Contacto</a></li>
+                <li class="header-li"><a href="index.html" class=""><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></a></li>
+                <li id="header_inicio" class="header-li"><a  href="index.html">Inicio</a></li>
+                <li class="header-li"><a href="personajes.html" class="">Personajes</a></li>
+                <li class="header-li"><a href="episodios.html" class="">Episodios</a></li>
+                <li id="header_contacto" class="header-li"><a href="contacto.html" >Contacto</a></li>
                 <li class="header-li"><a  href="registro.html" class="">Registro</a></li>
 
             </ul>
@@ -30,17 +30,20 @@
         <section>
             <form  class="main-form">
                 <label for="nombre" id="label_nombre"></label>
-                <input class="form-inputs" type="text" id="nombre" placeholder="Nombre" required>
+                <input class="form-inputs" type="text" id="nombre" placeholder="Nombre" required><span hidden id="nombre_error" class="span_error_forms"></span>
                 <label for="apellidos" id="label_apellidos"></label>
-                <input class="form-inputs" type="text" id="apellidos" placeholder="Apellidos">
+                <input class="form-inputs" type="text" id="apellidos" placeholder="Apellidos"><span hidden id="apellidos_error" class="span_error_forms"></span>
                 <label for="correo" id="label_correo"></label>
-                <input class="form-inputs" type="email" id="correo" placeholder="Correo Electronico" required>
+                <input class="form-inputs" type="text" id="correo" placeholder="Correo Electronico" required><span hidden id="correo_error" class="span_error_forms"></span>
                 <label for="telefono" id="label_telefono"></label>
-                <input class="form-inputs" type="number" id="telefono" placeholder="Telefono" >
-                <input class="form-checkboxs" type="checkbox" id="terminos" required> <span>Terminos y Condiciones</span></input>
-                <input class="form-checkboxs" type="checkbox" id="spam" > <span>Deseo recibir correos con noticias</span></input>
+                <input class="form-inputs" type="number" id="telefono" placeholder="Telefono" ><span hidden id="telefono_error" class="span_error_forms"></span>
+                <label for="terminos" id="labal_terminos"></label>
+                <div><input class="form-checkboxs" type="checkbox" id="terminos" required><span>   Terminos y Condiciones</span></input><span hidden id="terminos_error" class="span_error_forms"></span></div>
+                <label for="spam" id="labal_spam"></label>
+                <div><input class="form-checkboxs" type="checkbox" id="spam"><span>   Deseo recibir correos con noticias</span></input></div>
+                <label for="mensaje" id="labal_mensaje"></label>
                 <textarea class="form-message" id="mensaje" maxlength="500" required placeholder="Mensaje"></textarea>
-                <p class="contador_mensaje" id="contador_mensaje">0/500</p>
+                <div><span hidden id="mensaje_error" class="span_error_forms_mensaje"></span><p class="contador_mensaje" id="contador_mensaje">0/500</p></div>
                 <button type="submit" class="form-button" onclick="form_validation()">Enviar</button>
             </form>
 
@@ -53,12 +56,13 @@
     <footer class="footer">
         <hr>
         <nav class="footer-nav" >
-            <a class="">Cookies</a>
+            <a class="footer-cookies">Cookies</a>
             <a class="">Privacidad</a>
             <a class="">Info Legal</a>
-            <a class="">Sobre Nosotros</a>
-            <a class="">Condiciones</a>
-            <a class=""  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+            <a class="footer-nosotros">Sobre Nosotros</a>
+            <a class="footer-condiciones">Condiciones</a>
+            <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+            <a class="footer-contacto"  href="contacto.html">Contacto</a>
         </nav>
     </footer>
     
