--- a/episodios.html
+++ b/episodios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style-episdios.css" >
+    <link rel="stylesheet" type="text/css" href="css/style-episodios.css" >
 
     <title>Episodios</title>
 </head>
@@ -14,29 +14,69 @@
             <header class="header">
                 <nav class="header-nav">
                     <ul class="header-ul">
-                        <li class="header-li"><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
-                        <li class="header-li"><a href="index.html" class="">Inicio</a></li>
+                        <li class="header-li"><a href="index.html" class=""><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></a></li>
+                        <li id="header_inicio" class="header-li"><a  href="index.html">Inicio</a></li>
                         <li class="header-li"><a href="personajes.html" class="">Personajes</a></li>
-                        <li class="header-li"><a class="">Episodios</a></li>
-                        <li class="header-li"><a href="contacto.html">Contacto</a></li>
+                        <li class="header-li"><a href="episodios.html" class="">Episodios</a></li>
+                        <li id="header_contacto" class="header-li"><a href="contacto.html" >Contacto</a></li>
                         <li class="header-li"><a  href="registro.html" class="">Registro</a></li>
-        
+
                     </ul>
                 </nav>
             </header>
             <main class="main">
-                
+                <h1 class="font-breaking-bad-title">Episodios</h1>
+                <section class="main-episodios">
+                    <div class="main-episodio-div">
+                        <a href="presentacion-episodio.html ">
+                            <img class="main-episodio-image" src="images/1x1.jpg">
+                        </a>
+                        <div class="title-episodio">Piloto</div>
+
+                    </div>
+                    <div class="main-episodio-div">
+                        <img class="main-episodio-image" src="images/2x1.jpg">
+                        <div class="title-episodio">El gato está en la bolsa</div>
+
+                    </div>
+                    <div class="main-episodio-div">
+                        <img class="main-episodio-image" src="images/3x1.jpg">
+                        <div class="title-episodio">... Y la bolsa está en el rio </div>
+
+                    </div>
+                    <div class="main-episodio-div">
+                        <img class="main-episodio-image" src="images/4x1.jpg">
+                        <div class="title-episodio">Hombre del cancer</div>
+
+                    </div>
+                    <div class="main-episodio-div">
+                        <img class="main-episodio-image" src="images/5x1.jpg">
+                        <div class="title-episodio">Materia gris</div>
+
+                    </div>
+                    <div class="main-episodio-div">
+                        <img class="main-episodio-image" src="images/6x1.jpg">
+                        <div class="title-episodio">Nada como un puñado de locura</div>
+
+                    </div>
+                    <div class="main-episodio-div">
+                        <img class="main-episodio-image"     src="images/7x1.jpg">
+                        <div class="title-episodio">Un trato de no violencia</div>
+
+                    </div>
+                </section>
 
             </main>
             <footer class="footer">
                 <hr>
                 <nav class="footer-nav" >
-                    <a class="">Cookies</a>
+                    <a class="footer-cookies">Cookies</a>
                     <a class="">Privacidad</a>
                     <a class="">Info Legal</a>
-                    <a class="">Sobre Nosotros</a>
-                    <a class="">Condiciones</a>
-                    <a class=""  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+                    <a class="footer-nosotros">Sobre Nosotros</a>
+                    <a class="footer-condiciones">Condiciones</a>
+                    <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+                    <a class="footer-contacto"  href="contacto.html">Contacto</a>
                 </nav>
             </footer>
         </body>
