--- a/personajes.html
+++ b/personajes.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style-personajes.css" >
-    <title>Document</title>
+    <title>Personajes</title>
+    <script src="episodios.html" async type="text/javascript"></script>
 </head>
 <body>
     <header class="header">
         <nav class="header-nav">
             <ul class="header-ul">
-                <li class="header-li"><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
-                <li class="header-li"><a href="index.html" class="">Inicio</a></li>
-                <li class="header-li"><a class="">Personajes</a></li>
-                <li class="header-li"><a class="">Episodios</a></li>
-                <li class="header-li"><a href="contacto.html">Contacto</a></li>
-                <li class="header-li"><a href="login.html" class="">Login</a></li>
+                <li class="header-li"><a href="index.html" class=""><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></a></li>
+                <li id="header_inicio" class="header-li"><a  href="index.html">Inicio</a></li>
+                <li class="header-li"><a href="personajes.html" class="">Personajes</a></li>
+                <li class="header-li"><a href="episodios.html" class="">Episodios</a></li>
+                <li id="header_contacto" class="header-li"><a href="contacto.html" >Contacto</a></li>
+                <li class="header-li"><a  href="registro.html" class="">Registro</a></li>
 
             </ul>
         </nav>
@@ -25,40 +26,42 @@
         <h1 class="main-h1">Personajes</h1>
         <section class="main-personajes">
             <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/walter white.jpeg">
-                <div>Walter White</div>
+                <a href="presentacion-personaje.html">
+                    <img class="pesonaje-foto" src="images/walter white.jpeg">
+                </a>
+                <div  class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/jesse pinkman.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/BCS_T4_Gustavo_Fring.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/skyler white.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/hank  schrader.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/hector salamanca.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/walter white jr.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/saul goodman.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
             <div class="main-personaje-div">
                 <img class="pesonaje-foto" src="images/mike ehrmantraut.jpeg">
-                <div>Walter White</div>
+                <div class="title-personajes">Walter White</div>
             </div>
         </section>
         
@@ -66,12 +69,13 @@
     <footer class="footer">
         <hr>
         <nav class="footer-nav" >
-            <a class="">Cookies</a>
+            <a class="footer-cookies">Cookies</a>
             <a class="">Privacidad</a>
             <a class="">Info Legal</a>
-            <a class="">Sobre Nosotros</a>
-            <a class="">Condiciones</a>
-            <a class=""  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+            <a class="footer-nosotros">Sobre Nosotros</a>
+            <a class="footer-condiciones">Condiciones</a>
+            <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+            <a class="footer-contacto"  href="contacto.html">Contacto</a>
         </nav>
     </footer>
 </body>
