--- a/presentacion-personaje.html
+++ b/presentacion-personaje.html
@@ -13,21 +13,22 @@
         <header class="header">
             <nav class="header-nav">
                 <ul class="header-ul">
-                    <li class="header-li"><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></li>
-                    <li class="header-li"><a href="index.html" class="">Inicio</a></li>
+                    <li class="header-li"><a href="index.html" class=""><img class="header-li--logo" src="images/logo_breaking_bad.png"></img></a></li>
+                    <li id="header_inicio" class="header-li"><a  href="index.html">Inicio</a></li>
                     <li class="header-li"><a href="personajes.html" class="">Personajes</a></li>
-                    <li class="header-li"><a class="">Episodios</a></li>
-                    <li class="header-li"><a href="contacto.html">Contacto</a></li>
+                    <li class="header-li"><a href="episodios.html" class="">Episodios</a></li>
+                    <li id="header_contacto" class="header-li"><a href="contacto.html" >Contacto</a></li>
                     <li class="header-li"><a  href="registro.html" class="">Registro</a></li>
-    
+
                 </ul>
             </nav>
         </header>
         <main  class="main">
             <h1 class="font-breaking-bad-title">Walter White</h1>
-            <img  class="main-image" src="images/breaking bad wallpapers (12).jpg">
-            
-            <h2 class="main-description-h2">Descripcion</h2>
+            <div>
+                <img  class="main-image" src="images/breaking bad wallpapers (12).jpg">
+            </div>
+                <h2 class="main-description-h2">Descripcion</h2>
             <article class="main-parrafo">
                 <p>Walter "Walt" Hartwell White, también conocido por su seudónimo clandestino "Heisenberg", es un químico y profesor de química de Albuquerque, Nuevo México que, tras ser diagnosticado con cáncer de pulmón inoperable, decide empezar a fabricar metanfetamina para poder mantener a su familia provista de cara al futuro.</p>
 
@@ -41,12 +42,13 @@
         <footer class="footer">
             <hr>
             <nav class="footer-nav" >
-                <a class="">Cookies</a>
+                <a class="footer-cookies">Cookies</a>
                 <a class="">Privacidad</a>
                 <a class="">Info Legal</a>
-                <a class="">Sobre Nosotros</a>
-                <a class="">Condiciones</a>
-                <a class=""  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+                <a class="footer-nosotros">Sobre Nosotros</a>
+                <a class="footer-condiciones">Condiciones</a>
+                <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
+                <a class="footer-contacto"  href="contacto.html">Contacto</a>
             </nav>
         </footer>
     </body>
