solo falta, el modo oscuro amen

--- a/404.html
+++ b/404.html
@@ -23,7 +23,77 @@
             </nav>
         </header>
         <main class="main">
-            <h1><span class="span-404">404: </span><span class="span-archivo">Archivo no </span><span class="span-encontrado">encontrado</span></h1>
+            <h1 class="mensaje">
+                <span id="a_1">
+                    4
+                </span>
+                <span id="a_2">
+                    0
+                </span>
+                <span id="a_3">
+                    4
+                </span>
+                :
+                <span id="a_4">
+                    A
+                </span>
+                <span id="a_5">
+                    r
+                </span>
+                <span id="a_6">
+                    c
+                </span>
+                <span id="a_7">
+                    h
+                </span>
+                <span id="a_8">
+                    i
+                </span>
+                <span id="a_9">
+                    v
+                </span>
+                <span id="a_10">
+                    o
+                </span>
+                &nbsp;
+                <span id="a_11">
+                     n
+                </span>
+                <span id="a_12">
+                    o
+                </span>
+                &nbsp;
+                <span id="a_13">
+                    e
+                </span>
+                <span id="a_14">
+                    n
+                </span>
+                <span id="a_15">
+                    c
+                </span>
+                <span id="a_16">
+                    o
+                </span>
+                <span id="a_17">
+                    n
+                </span>
+                <span  id="a_18">
+                    t
+                </span>
+                <span  id="a_19">
+                    r
+                </span>
+                <span  id="a_20">
+                    a
+                </span>
+                <span  id="a_21">
+                    d
+                </span>
+                <span  id="a_22">
+                    o
+                </span>
+            </h1>
             <span hidden><img src="images/walter-white-gif.png"></span>
             <hr>
         </main>
