--- a/personajes.html
+++ b/personajes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style-personajes.css" >
     <title>Personajes</title>
-    <script src="episodios.html" async type="text/javascript"></script>
+    <script async src="js/personajes.js"  type="text/javascript"></script>
 </head>
 <body>
     <header class="header">
