todo listo, GG WP

--- a/episodios.html
+++ b/episodios.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/style-episodios.css" >
+        <link id="css" rel="stylesheet" type="text/css" href="css/style-episodios.css" >
+        <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
 
         <title>Episodios</title>
     </head>
@@ -75,6 +76,7 @@
                         <a class="footer-condiciones">Condiciones</a>
                         <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
                         <a class="footer-contacto"  href="contacto.html">Contacto</a>
+                        <button class="modoOscuro" data="oscuro" id="switch">Modo Claro</button>
                     </nav>
                 </footer>
     </body>
