--- a/presentacion-personaje.html
+++ b/presentacion-personaje.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style-presentacion-personaje.css" >
-
+    <link id="css" rel="stylesheet" type="text/css" href="css/style-presentacion-personaje.css" >
+    <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
     <title>Walter White</title>
 </head>
 <body>
@@ -49,6 +49,7 @@
                 <a class="footer-condiciones">Condiciones</a>
                 <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
                 <a class="footer-contacto"  href="contacto.html">Contacto</a>
+                <button class="modoOscuro" data="oscuro" id="switch">Modo Claro</button>
             </nav>
         </footer>
     </body>
