--- a/registro.html
+++ b/registro.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" type="text/css" href="css/style-registro.css" >
+    <link id="css" rel="stylesheet" type="text/css" href="css/style-registro.css" >
     <script  async type="text/javascript"  src="js/registro.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-   
+    <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
 
 </head>
 <body class="body">
@@ -80,11 +80,7 @@
             <a class="footer-condiciones">Condiciones</a>
             <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
             <a class="footer-contacto"  href="contacto.html">Contacto</a>
-            <button class="modoOscuro" id="switch">Modo Oscuro
-
-                <span><i class="fa fa-sun-o"></i></span>
-                <span><i class="fa fa-moon-o"></i></span>
-            </button>
+            <button class="modoOscuro" data="oscuro" id="switch">Modo Claro</button>
         </nav>
     </footer>
 </body>
