--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" >
+    <link id="css" rel="stylesheet" type="text/css" href="css/style.css" >
     <script async src="js/index.js"></script>
+    <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
 
 </head>
 <body class="body">
@@ -62,6 +63,7 @@
             <a class="footer-condiciones">Condiciones</a>
             <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
             <a class="footer-contacto"  href="contacto.html">Contacto</a>
+            <button class="modoOscuro" data="oscuro" id="switch">Modo Claro</button>
         </nav>
     </footer>
 </body>
