--- a/login.html
+++ b/login.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="css/style-login.css" >
+    <link id="css" rel="stylesheet" type="text/css" href="css/style-login.css" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script  async type="text/javascript" src="js/login.js"></script>
+    <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
 </head>
 <body class="body">
     <header class="header">
@@ -61,6 +62,7 @@
             <a class="footer-condiciones">Condiciones</a>
             <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
             <a class="footer-contacto"  href="contacto.html">Contacto</a>
+            <button class="modoOscuro" data="oscuro" id="switch">Modo Claro</button>
         </nav>
     </footer>
 </body>
