--- a/personajes.html
+++ b/personajes.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style-personajes.css" >
+    <link id="css" rel="stylesheet" type="text/css" href="css/style-personajes.css" >
     <title>Personajes</title>
     <script async src="js/personajes.js"  type="text/javascript"></script>
+    <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
 </head>
 <body>
     <header class="header">
@@ -76,6 +77,7 @@
             <a class="footer-condiciones">Condiciones</a>
             <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
             <a class="footer-contacto"  href="contacto.html">Contacto</a>
+            <button class="modoOscuro" data="oscuro" id="switch">Modo Claro</button>
         </nav>
     </footer>
 </body>
