--- a/presentacion-episodio.html
+++ b/presentacion-episodio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style-presentacion-episodio.css" >
+    <link id="css" rel="stylesheet" type="text/css" href="css/style-presentacion-episodio.css" >
+    <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
 
     <title>Episodio 1x1</title>
 </head>
@@ -49,6 +50,7 @@
                 <a class="footer-condiciones">Condiciones</a>
                 <a class="footer-walter"  href="http://www.savewalterwhite.com/">SaveWalterWhite</a>
                 <a class="footer-contacto"  href="contacto.html">Contacto</a>
+                <button class="modoOscuro" data="oscuro" id="switch">Modo Claro</button>
             </nav>
         </footer>
     </body>
