llamada a la api creada correctamente

--- a/presentacion-episodio.html
+++ b/presentacion-episodio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="css" rel="stylesheet" type="text/css" href="css/style-presentacion-episodio.css" >
     <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
-
+    <script async type="text/javascript" src="js/presentacion-episodio-api.js"></script>
     <title>Episodio 1x1</title>
 </head>
 <body>
@@ -24,19 +24,8 @@
                 </ul>
             </nav>
         </header>
-        <main  class="main">
-            <div>
-            <img  class="main-image" src="images/1x1.jpg">
-            </div>
-            <h3 class="main-description-h3">Temporada 1, Episodio 1</h3>
-            <h2 class="main-description-h2">Sinopsis</h2>
-            <article class="main-parrafo">
+        <main id="main"  class="main">
 
-                <p>Walter White en el desierto, en el medio de la nada, sin pantalones está a punto de ser capturado… corte a, viajamos al pasado y lo vemos junto a su familia (Skyler y Walt Jr.) celebrar su cumpleaños 50. Él es profesor en Albuquerque, apasionado por la química, con problemas de dinero que a la par tiene que trabajar en un lavadero de coches, lugar donde se pone mal y tiene que ser llevado al hospital donde recibe la noticia de que tiene cáncer de pulmón.</p>
-              <p>
-                Con los días casi contados, Walt comienza a sentir una transformación que lo lleva en búsqueda de nuevas aventuras, una de ellas: vivir una redada antinarcótica junto a Hank, su concuñado agente de la DEA. En ese momento le surge la idea de cocinar metanfetamina y su futuro socio aparece: su exalumno Jesse Pinkman. En medio de una serie de conflictos, semanas después comienzan a trabajar. Las personalidades chocan: uno, un químico dispuesto a aplicar la ciencia lo mejor posible; el otro, pretendiendo imponer su forma de hacer las cosas.
-              </p>
-            </article>
 
             
         </main>
