--- a/presentacion-personaje.html
+++ b/presentacion-personaje.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link id="css" rel="stylesheet" type="text/css" href="css/style-presentacion-personaje.css" >
     <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
+    <script async type="text/javascript" src="js/presentacion-personaje-api.js"></script>
     <title>Walter White</title>
 </head>
 <body>
@@ -23,21 +24,8 @@
                 </ul>
             </nav>
         </header>
-        <main  class="main">
-            <h1 class="font-breaking-bad-title">Walter White</h1>
-            <div>
-                <img  class="main-image" src="images/breaking bad wallpapers (12).jpg">
-            </div>
-                <h2 class="main-description-h2">Descripcion</h2>
-            <article class="main-parrafo">
-                <p>Walter "Walt" Hartwell White, también conocido por su seudónimo clandestino "Heisenberg", es un químico y profesor de química de Albuquerque, Nuevo México que, tras ser diagnosticado con cáncer de pulmón inoperable, decide empezar a fabricar metanfetamina para poder mantener a su familia provista de cara al futuro.</p>
+        <main id ="main" class="main">
 
-                <p>Walt era un químico prometedor que contribuyó en el auge de la compañía multimillonaria Gray Matter Technologies, pero salió de la empresa de forma abrupta vendiendo su parte de la misma por cinco mil dólares. Los fundadores Elliott y Gretchen Schwartz se casan y hacen una fortuna, mientras que Walt les acusa de apoderarse de sus contribuciones para tener éxito sin darle ningún crédito.</p>
-                
-                <p>Sin saber nada sobre el tráfico de drogas, Walt obtiene la ayuda de un ex-estudiante suyo, Jesse Pinkman, para la fabricación y sobretodo para la venta de la droga. Su conocimiento científico y dedicación a la calidad le hacen producir metanfetamina a un nivel de pureza insuperable. Walt lleva a cabo un proceso alternativo utilizando metilamina, lo cual otorga a su producto un distintivo color azul: el cristal azul empieza instantáneamente a dominar el mercado y se hace popular entre traficantes y adictos.</p>
-            </article>
-
-            
         </main>
         <footer class="footer">
             <hr>
