--- a/episodios.html
+++ b/episodios.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link id="css" rel="stylesheet" type="text/css" href="css/style-episodios.css" >
         <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
+        <script async type="text/javascript" src="js/episodios-api.js"></script>
 
         <title>Episodios</title>
     </head>
@@ -25,44 +26,17 @@
                 </header>
                 <main class="main">
                     <h1 class="font-breaking-bad-title">Episodios</h1>
-                    <section class="main-episodios">
-                        <div class="main-episodio-div">
-                            <a href="presentacion-episodio.html ">
-                                <img class="main-episodio-image" src="images/1x1.jpg">
-                            </a>
-                            <div class="title-episodio">Piloto</div>
+                    <div>
+                    <select id="select" id="temporadas" name="temporada">
+                        <option value="1">Temporada 1</option>
+                        <option value="2">Temporada 2</option>
+                        <option value="3">Temporada 3</option>
+                        <option value="4">Temporada 4</option>
+                        <option value="5">Temporada 5</option>
+                    </select>
+                    </div>
+                    <section id="episodios" class="main-episodios">
 
-                        </div>
-                        <div class="main-episodio-div">
-                            <img class="main-episodio-image" src="images/2x1.jpg">
-                            <div class="title-episodio">El gato está en la bolsa</div>
-
-                        </div>
-                        <div class="main-episodio-div">
-                            <img class="main-episodio-image" src="images/3x1.jpg">
-                            <div class="title-episodio">... Y la bolsa está en el rio </div>
-
-                        </div>
-                        <div class="main-episodio-div">
-                            <img class="main-episodio-image" src="images/4x1.jpg">
-                            <div class="title-episodio">Hombre del cancer</div>
-
-                        </div>
-                        <div class="main-episodio-div">
-                            <img class="main-episodio-image" src="images/5x1.jpg">
-                            <div class="title-episodio">Materia gris</div>
-
-                        </div>
-                        <div class="main-episodio-div">
-                            <img class="main-episodio-image" src="images/6x1.jpg">
-                            <div class="title-episodio">Nada como un puñado de locura</div>
-
-                        </div>
-                        <div class="main-episodio-div">
-                            <img class="main-episodio-image"     src="images/7x1.jpg">
-                            <div class="title-episodio">Un trato de no violencia</div>
-
-                        </div>
                     </section>
 
                 </main>
