--- a/personajes.html
+++ b/personajes.html
@@ -8,6 +8,7 @@
     <title>Personajes</title>
     <script async src="js/personajes.js"  type="text/javascript"></script>
     <script  async type="text/javascript"  src="js/modoOscuro.js"></script>
+    <script async type="text/javascript" src="js/personajes-api.js"></script>
 </head>
 <body>
     <header class="header">
@@ -25,46 +26,10 @@
     </header>
     <main class="main">
         <h1 class="main-h1">Personajes</h1>
-        <section class="main-personajes">
-            <div class="main-personaje-div">
-                <a href="presentacion-personaje.html">
-                    <img class="pesonaje-foto" src="images/walter white.jpeg">
-                </a>
-                <div  class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/jesse pinkman.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/BCS_T4_Gustavo_Fring.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/skyler white.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/hank  schrader.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/hector salamanca.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/walter white jr.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/saul goodman.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
-            <div class="main-personaje-div">
-                <img class="pesonaje-foto" src="images/mike ehrmantraut.jpeg">
-                <div class="title-personajes">Walter White</div>
-            </div>
+        <section id="personajes" class="main-personajes">
+
         </section>
+
         
     </main>
     <footer class="footer">
